# robofest-2.0

./: db.sqlite3  manage.py  pyproject.toml
control/: models.py  routing.py  views.py
control/migrations/: 0001_initial.py  0002_alter_componenets_degrees.py  0003_griper_gripercommands.py  0004_griperindexpage.py
robo/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: input.css  output.css
tailwind/: package.json  tailwind.config.js
templates/: base.html
templates/control/: griper_index_page.html  home.html  led.html  servo.html
ws/: fusion.py  main.py  web.py  ws.py
