[tool.poetry]
name = "robofest"
version = "0.1.0"
description = ""
authors = ["RohanJnr <rohanjnr44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.1.1"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
channels = {version = "^4.0.0", extras = ["daphne"]}
websockets = "^10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
